[gd_scene load_steps=6 format=2]

[ext_resource path="res://Boss/Moon.gd" type="Script" id=1]
[ext_resource path="res://Boss/Mercury.png" type="Texture" id=2]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="Moon" type="KinematicBody2D" groups=["orbiter"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
local_coords = false
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 2.0
color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Collider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 3 )

[node name="HealTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Collider" to="." method="_on_Collider_body_entered"]
